# rustwhy

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  module_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
assets/completions/: README.md
assets/man/: README.md
assets/screenshots/: README.md
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GPU_SUPPORT.md  MODULES.md  PROJECT_STATUS.md
src/: lib.rs  main.rs
src/cli/: args.rs  completions.rs  mod.rs
src/core/: mod.rs  report.rs  runner.rs  severity.rs  traits.rs
src/modules/: batt.rs  boot.rs  cpu.rs  disk.rs  fan.rs  gpu.rs  io.rs  mem.rs  mod.rs  mount.rs  net.rs  sleep.rs  temp.rs  usb.rs
src/output/: json.rs  mod.rs  table.rs  terminal.rs
src/utils/: files.rs  format.rs  mod.rs  parse.rs  permissions.rs  process.rs  system.rs
tests/: cli_tests.rs  module_tests.rs
tests/common/: mod.rs
